<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroller"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/preview"
            android:layout_width="fill_parent"
            android:layout_height="1.5in"
            android:contentDescription="@string/content_description" />

        <CheckBox
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/preview"
            android:text="@string/location_text" />

        <CheckBox
            android:id="@+id/timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location"
            android:text="@string/timestamp_text" />

        <Button
            android:id="@+id/buttonUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/timestamp"
            android:layout_marginRight="19dp"
            android:gravity="center_vertical"
            android:onClick="uploadClicked"
            android:text="@string/upload_button_text" />
    </RelativeLayout>

</ScrollView>